--- a/app/src/main/res/layout/activity_other.xml
+++ b/app/src/main/res/layout/activity_other.xml
@@ -4,25 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".OtherActivity"
     android:orientation="vertical"
     android:padding="20dp"
-    android:gravity="center">
+    android:gravity="center"
+    android:background="@color/black">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="여기는 메인화면 입니다."
-        android:textSize="20sp"/>
-
+        android:text="여기는 다른 화면입니다."
+        android:textColor="@color/white"
+        android:textSize="21sp"/>
     <Button
-        android:id="@+id/btnMoveToOther"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="다른화면으로 이동"/>
-
-
-
+        android:text="이전 화면으로 복귀하기"/>
 
 
 </LinearLayout>
