--- a/app/src/main/res/layout/activity_other.xml
+++ b/app/src/main/res/layout/activity_other.xml
@@ -17,6 +17,7 @@
         android:textColor="@color/white"
         android:textSize="21sp"/>
     <Button
+        android:id="@+id/btnReturnToMain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="이전 화면으로 복귀하기"/>
